--- a/index.html
+++ b/index.html
@@ -21,36 +21,44 @@
     <link rel="stylesheet" href="assets/fonts/hvd_fonts_-_brandongrotesque-medium-webfont.css" type="text/css" charset="utf-8" />
 </head>
 <div class="container-fluid" id="video-container">
-    <div class="col-md-12">
+    <div class="col-md-12" id="header-row">
         <div id="header-logo">
             <a href="/"><span class="button-span"></span></a>
             <img src="assets/images/toymail_logo_small.svg" id="header-logo-img" >
-            <h1 class="header-logo-p">TOYMAIL</h1>
+            <h2 class="header-logo-p">TOYMAIL</h2>
         </div>
         <div id="header-order">
-            <a href="/collections/talkies/"><span class="button-span"></span></a>
+            <a href="/"><span class="button-span"></span></a>
             <p class="header-order-txt">PRE ORDER <span class="underline">HERE!</span></p>
         </div>
     </div>
     <div id="video-wrapper">
-        <div id="video-button">
+        <div id="link-wrapper">
             <a href="//www.youtube.com/watch?v=XSGBVzeBUbk" data-lity><span class="button-span"></span></a>
-            <i class="fa fa-play" aria-hidden="true"></i>
+        </div>
+        <div id="header-order2">
+            <a href="/"><span class="button-span"></span></a>
+            <p class="header-order-txt">PRE ORDER <span class="underline">HERE!</span></p>
         </div>
     </div>
 </div>
 <div class="container-fluid content-container">
-    <div class="row" class="upper-row">
+    <div class="row upper-row" id="upper-row1">
         <div class="placeholder"><div class="line"></div></div>
         <div class="text-wrapper">
-            <h2 class="upper-text">STATUS UPDATE / OFFERS</h2>
+            <p class="upper-text">STATUS UPDATE / OFFERS</p>
         </div>
     </div>
     <div class="row heading-row">
-        <h1 class="heading-text">Beta testers testing!</h1>
+        <p class="heading-text">Beta testers testing!</p>
     </div>
-    <div class="row text-row">
-        <h1 class="text-text">We are wrapping up our final beta tests now! Click above to see some real kids (not actors) putting the Talkies to good use. Our expected ship date is Fall 2016 and we appreciate your patience!</h1>
+    <div class="row text-row" id="text-row1">
+        <p class="text-text"><span class="avoidwrap">We are wrapping up our final beta tests</span>
+            <span class="avoidwrap">now! Click above to see some real</span>
+            <span class="avoidwrap">kids (not actors) putting the Talkies to</span>
+            <span class="avoidwrap">good use. Our expected ship date is Fall</span>
+            <span class="avoidwrap">2016 and we appreciate your patience!</span>
+        </p>
     </div>
     <div class="row other-row">
         <div class="col-md-12">
@@ -62,68 +70,82 @@
     </div>
 </div>
 <div class="container-fluid content-container">
-    <div class="row" class="upper-row">
+    <div class="row upper-row" id="upper-row2">
         <div class="placeholder"><div class="line"></div></div>
         <div class="text-wrapper">
-            <h2 class="upper-text">NEW FEATURE</h2>
+            <p class="upper-text">NEW FEATURE</p>
         </div>
 
     </div>
     <div class="row heading-row">
-        <h1 class="heading-text">Machine Washable</h1>
+        <p class="heading-text">Machine Washable</p>
     </div>
-    <div class="row text-row">
-        <h1 class="text-text">We are wrapping up our final beta tests now! Click above to see some real kids (not actors) putting the Talkies to good use. Our expected ship date is Fall 2016 and we appreciate your patience!</h1>
+    <div class="row text-row" id="text-row2">
+        <p class="text-text"><span class="avoidwrap">This news just in! The plush cover of our Talkies</span>
+            <span class="avoidwrap">is now a removable, machine washable cover.</span>
+            <span class="avoidwrap">So not only can you keep your Talkies clean and</span>
+            <span class="avoidwrap">sparkly, you can purchase more “skins”</span>
+            <span class="avoidwrap">separately to swap our characters.</span></p>
     </div>
     <div class="row other-row">
         <div id="washing-div">
-            <img src="assets/images/sample.png" width="40%">
-            <img src="assets/images/sample.png" width="10%" style="margin: 0px 5%">
-            <img src="assets/images/sample.png" width="40%">
+            <img src="assets/images/wash.svg" width="89px">
+            <i class="fa fa-plus" aria-hidden="true" id="plus"></i>
+            <img src="assets/images/toymail_logo_big.svg" width="123px">
         </div>
     </div>
 </div>
 <div class="container-fluid content-container">
-    <div class="row" class="upper-row">
+    <div class="row upper-row" id="upper-row3">
         <div class="placeholder"><div class="line"></div></div>
         <div class="text-wrapper">
-            <h2 class="upper-text">STATUS UPDATE / OFFERS</h2>
+            <p class="upper-text">PARTNER NEWS/ TESTIMONIAL</p>
         </div>
 
     </div>
     <div class="row heading-row">
-        <h1 class="heading-text">Beta testers testing</h1>
+        <p class="heading-text">Partner News!</p>
     </div>
-    <div class="row text-row">
-        <h1 class="text-text">We are wrapping up our final beta tests now! Click above to see some real kids (not actors) putting the Talkies to good use. Our expected ship date is Fall 2016 and we appreciate your patience!</h1>
+    <div class="row text-row" id="text-row3">
+        <p class="text-text"><span class="avoidwrap">Technology Will Save Us is another startup like us</span>
+            <span class="avoidwrap">that wants to make tech accessible</span>
+            <span class="avoidwrap">to kids in a safe and parent-approved way without</span>
+            <span class="avoidwrap">adding yet another screen. Their</span>
+            <span class="avoidwrap">Mover Kit is the first active play wearable that</span>
+            <span class="avoidwrap">kids make and code themselves. It’s a</span>
+            <span class="avoidwrap">game, speed-activated bike light, disco bracelet -</span>
+            <span class="avoidwrap">whatever a kid can make, move & code it to be.</span>
+            <br><span class="avoidwrap">Check it out here!</span></p>
     </div>
     <div class="row other-row">
 
     </div>
 </div>
 <div class="container-fluid content-container">
+    <div class="row upper-row" id="upper-row4">
+        <div class="placeholder"><div class="line"></div></div>
+        <div class="text-wrapper">
+            <p class="upper-text">KEEP IT IN THE LOOP</p>
+        </div>
+    </div>
     <div class="row" id="media-row">
         <div class="col-md-12" id="media-div">
-            <div class="footer-icon-div">
-                <a href=""><span class="button-span"></span></a>
-                <i class="fa fa-facebook footer-icon" aria-hidden="true"></i>
-            </div>
-            <div class="footer-icon-div">
-                <a href=""><span class="button-span"></span></a>
-                <i class="fa fa-twitter footer-icon" aria-hidden="true"></i>
-            </div>
-            <div class="footer-icon-div">
-                <a href=""><span class="button-span"></span></a>
-                <i class="fa fa-pinterest-p footer-icon" aria-hidden="true"></i>
-            </div>
-            <div class="footer-icon-div">
-                <a href=""><span class="button-span"></span></a>
-                <i class="fa fa-youtube-play footer-icon" aria-hidden="true"></i>
-            </div>
-            <div class="footer-icon-div">
-                <a href=""><span class="button-span"></span></a>
-                <i class="fa fa-instagram footer-icon" aria-hidden="true"></i>
-            </div>
+            <a href="">
+                <img src="assets/images/facebook.svg" class="media-img">
+            </a>
+            <a href="">
+                <img src="assets/images/twitter.svg" class="media-img">
+            </a>
+            <a href="">
+                <img src="assets/images/pinterest.svg" class="media-img">
+            </a>
+            <a href="">
+                <img src="assets/images/youtube.svg" class="media-img">
+            </a>
+            <a href="">
+                <img src="assets/images/instagram.svg" class="media-img">
+            </a>
+
         </div>
     </div>
     <div class="row button-row">
@@ -136,7 +158,7 @@
     </div>
     <div class="row text-row">
         <div class="col-md-12">
-            <p class="text-text">Expected ship date Fall 2016</p>
+            <p class="text-text" id="small-text">Expected ship date Fall 2016</p>
         </div>
     </div>
     <div class="row" id="copy-row">
